--- a/css/main.css
+++ b/css/main.css
@@ -157,38 +157,30 @@ nav a:hover::after{
     margin-top: 20vh;
     display: flex;
 }
-#one p, #two p, #three p, #four p{
-    width: 5vw;
-    font-size: 0.7vw;
+#one p{
+    width: 24vw;
+    text-align: center;
+    font-size: 1vw;
     color: rgba(239, 239, 239, 0.903);
     margin-left: 0.2vw;
 }
-#one, #two, #three, #four{
+#one{
     border-left: 3px solid #555555;
     height: 12vh;
     
 }
-#five, #six, #seven, #eight, #nine{
+#five, #six, #eight, #nine{
     border-left: 3px solid #127396;
     height: 12vh;
 }
 #one{
-    width: 6.1vw;
-}
-#two{
-    width: 6.1vw;
-}
-#three{
-    width: 6.05vw;
-}
-#four{
-    width: 6.02vw;
+    width: 24.3vw;
 }
 #five{
     width: 7.05vw;
 }
 #six{
-    width: 6.96vw;
+    width: 14vw;
 }
 #seven{
     width: 7vw;
@@ -196,11 +188,18 @@ nav a:hover::after{
 #eight{
     width: 7vw;
 }
-#five p, #six p, #seven p, #eight p, #nine p{
+#five p, #eight p, #nine p{
     color: rgba(239, 239, 239, 0.903);
     margin-left: 0.2vw;
     font-size: 0.7vw;
     width: 6vw;
+}
+#six p{
+    width: 13vw;
+    color: rgba(239, 239, 239, 0.903);
+    margin-left: 0.2vw;
+    font-size: 0.8vw;
+    text-align: center;
 }
 #linha{
     height: 4vh;
@@ -327,6 +326,7 @@ nav a:hover::after{
     text-align: center;
     font-size: 2.3vw;
 }
+/*footer*/
 footer{
     padding-top: 1.5vh;
     padding-bottom: 1.5vh;
@@ -351,6 +351,17 @@ footer{
     color: #cececed4;
     font-size: 0.8vw;
 }
+#contato{
+    line-height: 23px;
+}
+#contato a:hover{
+    text-decoration: underline;
+}
+/*icon retornar ao topo*/
+
+#topo img:hover{
+    cursor: pointer;
+}
 #topo{
     position: fixed;
     bottom: 0.7vw;
@@ -369,7 +380,139 @@ footer{
         transform: translateY(0);
     }
 }
-#topo img:hover{
+
+
+
+/*projetos*/
+
+#projetos{
+    min-height: 100vh;
+    background-image: url("../img/blur02.png");
+
+}
+#container-slider{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 95vh;
+    flex-direction: column;
+}
+.container-slider{
+    width: 80vw;
+    min-height: 70vh;
+    background-color: #34343462;
+    box-shadow: 0px 0px 2px 2px #ecdadbae;
+    border-radius: 0.5vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+#header-slider{
+    height: 5.9vh;
+    width: 25vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5vw;
+    color: #55a5bb;
+    font-family: 'ubuntu';
+    border-bottom: 2px solid #7e7e7ee8;
+    background-color: #34343400;
+    border-radius: 1vw;
+    
+}
+#bottom-slider{
+    height: 35vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80vw;
+}
+.carrossel{
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 68vw;
+    height: 45vh;
+    border-radius: 1vw;
+    overflow-x: auto;
+    gap: 1vw;
+}
+.carrossel img{
+    width: 22vw;
+    height: 24vh;
+    border-radius: 2vw 2vw 0 0;
+    border: 2px solid rgb(40, 40, 40);
+}
+.describe{
+    width: 22vw;
+    height: 14vh;
+    border-radius: 0 0 2vw 2vw;
+    background-color: #55a5bb;
+    color: #2c2c2ce8;
+    text-align: center;
+    margin-top: -2vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    font-family: 'IBM Plex Mono', monospace;
+    border: 2px solid rgb(41, 41, 41);
+}
+.describe p{
+    width: 19vw;
+}
+.btns{
+    display: flex;
+    justify-content: space-evenly;
+    width: 300px;
+}
+.link:hover{
+    background-color: #e8e8e8e8;
+    color: black;
+    font-weight: 600;
+    transition: background-color 0.5s;
+}
+.link{
+    width: 95px;
+    height: 32px;
+    border-radius: 0.2rem;
+    border: none;
+    background-color: #212121;
+    color: #E8E8E8;
+}
+.slider{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    opacity: 0.5;
+    transition: all 750ms ease-in-out;
+}
+.on{
+    opacity: 1;
+}
+.on img, .on .describe{
+}
+#prev-bt img, #next-bt img{
+    width: 3vw;
+    height: 5vh;
     cursor: pointer;
 }
+#prev-bt, #next-bt{
+    border: none;
+    background-color: transparent;
+}
+/* This is from w3schools */
+/* 
+https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
+/* Hide scrollbar for Chrome, Safari and Opera */
+.carrossel::-webkit-scrollbar {
+    display: none;
+  }
+  .carrolssel {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 
